Advance features added

--- a/app/views/faculties/_filter_form.html.erb
+++ b/app/views/faculties/_filter_form.html.erb
@@ -6,17 +6,17 @@
 <%= form_for_filterrific @filterrific, { class: 'filterrific-form' } do |f| %>
   <div class="row g-3">
     <div class="col-md-4">
-      <%= f.label :search_query, "Faculty Name contains", class: "form-label" %>
+      <%= f.label :search_query, "Faculty Name contains", class: "form-label" ,style:"color:white;" %>
       <%= f.text_field :search_query, class: "form-control" %>
     </div>
 
     <div class="col-md-4">
-      <%= f.label :with_department_id, "Department", class: "form-label" %>
+      <%= f.label :with_department_id, "Department", class: "form-label" ,style:"color:white;"%>
       <%= f.select :with_department_id, [['All Branches', nil]] + @filterrific.select_options[:with_department_id], { style: 'text-decoration: none;' }, class: "form-select" %>
     </div>
 
     <div class="col-12 mt-3">
-      <%= f.submit "Apply Filters", class: "btn btn-secondary" %>
+      <%= f.submit "Apply Filters", class: "btn btn-success" %>
     </div>
   </div>
 <% end %>
