--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -1,38 +1,83 @@
+img{
+  display: flex;
+  width: 100%;
+  height: auto;
+}
+
 .main-container{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
 }
 
 .nitk-header{
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  width:100%;
+  box-shadow: 0px 11px 5px -1px rgba(0, 0, 0, 0.3);
 }
 
-.telephone_header{
+.telephone-header{
   display: flex;
+  font-family: "Poppins", sans-serif;
+  font-size: 2rem;
 }
 
-.content{
+.contents{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  height:100%;
+  width:100%;
 }
 
-.content_list{
+.contents-list{
   display: flex;
-  overflow-y: auto;
+  flex: 1;
+  width:100%;
 }
 
 .search-area{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  flex: 3;
+  width:100%;
+  height:100%;
 }
 
-.search_header{
+.search-header{
   display: flex;
+  width: 100%;
 }
 
-.search_data{
+.search-data{
   display: flex;
   flex-direction: row;
   overflow-y: auto;
+}
+
+
+main {
+  display: flex;
+  justify-content: center;
+}
+
+table {
+  max-width: 100%;
+}
+
+tr:nth-child(odd) {
+  background-color: #eee;
+}
+
+th {
+  background-color: #555;
+  color: #fff;
+}
+
+th,
+td {
+  text-align: left;
+  padding: 0.5em 1em;
 }
