--- a/app/views/faculties/index.html.erb
+++ b/app/views/faculties/index.html.erb
@@ -10,7 +10,7 @@
   </div>
   <header class="d-flex justify-content-center py-3">
     <div class="telephone-header">
-      TELEPHONE DIRECTORY WEBSITE NITK
+      TELEPHONE DIRECTORY
     </div>
   </header>
 
@@ -30,8 +30,6 @@
     <div class="search-area">
       <div class="search-header">
         <div class="p-4 rounded text-body-emphasis" style="width:100%;background-color:#192f59;">
-          <h1 class="display-4 fst-italic" style="color:white;">Faculties of NITK</h1>
-          <p class="lead my-3" style="color:white;">A one-stop place to get in touch with top faculties of NITK</p>
           <p class="lead mb-0" style="color:white;"><a href="#" class="text-body-emphasis fw-bold"><%= render 'filter_form' %></a></p>
         </div>
       </div>
