--- a/app/views/faculties/index.html.erb
+++ b/app/views/faculties/index.html.erb
@@ -40,6 +40,8 @@
   </div>
 </div>
 
+<%= render 'footer' %>
+
 <script>
     document.addEventListener("DOMContentLoaded", function() {
       const accordions = document.querySelectorAll('.accordion');
