--- a/app/views/faculties/_footer.html.erb
+++ b/app/views/faculties/_footer.html.erb
@@ -1,8 +1,8 @@
 <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
       <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Team</a></li>
+      <li class="nav-item"><%= link_to 'About', home_about_path, class: "nav-link px-2 text-body-secondary" %></li>
+      <li class="nav-item"><%= link_to 'Team', home_team_path, class: "nav-link px-2 text-body-secondary" %></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Contact Us</a></li>
     </ul>
     <p class="text-center text-body-secondary">Made with ❤️ by <b> Devs 'N' Revs Team </b></p>
