New changes updated

--- a/app/views/faculties/index.html.erb
+++ b/app/views/faculties/index.html.erb
@@ -39,9 +39,7 @@
     </div>
   </div>
 </div>
-
-<%= render 'footer' %>
-
+<%= render 'faculties/footer' %>
 <script>
     document.addEventListener("DOMContentLoaded", function() {
       const accordions = document.querySelectorAll('.accordion');
