--- a/app/views/faculties/_filter_form.html.erb
+++ b/app/views/faculties/_filter_form.html.erb
@@ -12,7 +12,7 @@
 
   /* Style the advanced search button */
   #advanced-search-btn {
-    background-color: #28a745; /* Green color */
+    background-color: #198754; /* Green color */
     color: white;
     border: none;
     padding: 10px 20px;
@@ -41,15 +41,17 @@
     </div>
 
     <!-- Advanced Search Fields -->
+    <div class="col-md-4" id="filterrific_with_department_id" style="display: none;">
+      <%= f.label :with_department_id_advanced, "Search By Department", class: "form-label", style: "color:white;" %>
+      <%= f.select :with_department_id_advanced, [['All Branches', nil]] + @filterrific.select_options[:with_department_id], { style: 'text-decoration: none;' }, class: "form-select" %>
+    </div>
+    
     <div class="col-md-4" id="filterrific_search_designation" style="display: none;">
       <%= f.label :search_designation_advanced, "Search By Designation", class: "form-label", style: "color:white;" %>
       <%= f.text_field :search_designation_advanced, class: "form-control" %>
     </div>
 
-    <div class="col-md-4" id="filterrific_with_department_id" style="display: none;">
-      <%= f.label :with_department_id_advanced, "Search By Department", class: "form-label", style: "color:white;" %>
-      <%= f.select :with_department_id_advanced, [['All Branches', nil]] + @filterrific.select_options[:with_department_id], { style: 'text-decoration: none;' }, class: "form-select" %>
-    </div>
+    
   </div>
 <% end %>
 
@@ -58,8 +60,9 @@
     // Add a click event listener to the Advanced Search button
     document.getElementById('advanced-search-btn').addEventListener('click', function () {
       // Toggle the visibility of the Advanced Search Fields
-      toggleVisibility('filterrific_search_designation');
       toggleVisibility('filterrific_with_department_id');
+      toggleVisibility('filterrific_search_designation');
+      
     });
   });
 
