--- a/app/views/faculties/_faculty_list.html.erb
+++ b/app/views/faculties/_faculty_list.html.erb
@@ -23,7 +23,7 @@
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
   }
-
+  
   .table th,
   .table td {
     text-align: center;
@@ -124,7 +124,7 @@
                             <dd class="col-sm-6 text-start"><%= faculty.email %></dd>
 
                             <dt class="col-sm-6 text-start">Personal Webpage</dt>
-                            <dd class="col-sm-6 text-start overflow-visible"><a href="<%= faculty.site_name %>" target="_blank"><%= faculty.site_name %></a></dd>
+                            <dd class="col-sm-6 text-start overflow-visible"><a href="<%= faculty.site_name %>" target="_blank">Click Here</a></dd>
 
                             <dt class="col-sm-6 text-start">Last Updated</dt>
                             <dd class="col-sm-6 text-start"><%= faculty.updated_at.strftime('%B %d, %Y %I:%M %p') %></dd>
