--- a/app/views/faculties/_filter_form.html.erb
+++ b/app/views/faculties/_filter_form.html.erb
@@ -31,13 +31,13 @@
     </div>
 
     <!-- Search Button -->
-    <div class="col-md-4 mt-5" style="padding-left:5%;">
+    <div class="col-md-2 mt-5" style="padding-left:5%;">
       <%= f.submit "Search", class: "btn btn-success" %>
     </div>
 
     <!-- Advanced Search Button -->
-    <div class="col-md-4 mt-3">
-      <button type="button" id="advanced-search-btn" class="btn btn-success">Advanced Search</button>
+    <div class="col-md-4 mt-5">
+      <button type="button" id="advanced-search-btn" class="btn btn-success" style="padding: 6px 12px; margin: 0;">Advanced Search</button>
     </div>
 
     <!-- Advanced Search Fields -->
