--- a/app/views/home/team.html.erb
+++ b/app/views/home/team.html.erb
@@ -4,7 +4,7 @@
   <div class="nitk-header">
     <div class="container">
       <header class="d-flex justify-content-center py-3">
-        <li class="nav-item"><a href="#" class="nav-link active" aria-current="page"><%= image_tag 'header.png' %></a></li>
+        <li class="nav-item"><a href="https://www.nitk.ac.in/" class="nav-link active" aria-current="page"><%= image_tag 'header.png' %></a></li>
       </header>
     </div>
   </div>
