--- a/app/views/faculties/_faculty_list.html.erb
+++ b/app/views/faculties/_faculty_list.html.erb
@@ -97,7 +97,7 @@
                             <dd class="col-sm-6 text-start"><%= faculty.name %></dd>
 
                             <dt class="col-sm-6 text-start">Designation</dt>
-                            <dd class="col-sm-6 text-start"><%= faculty.designation %></dd>
+                            <dd class="col-sm-6 text-start"><%= faculty.designation.title %></dd>
 
                             <dt class="col-sm-6 text-start">Unit</dt>
                             <dd class="col-sm-6 text-start"><%= faculty.department.name %></dd>
