--- a/app/views/faculties/_faculty_list.html.erb
+++ b/app/views/faculties/_faculty_list.html.erb
@@ -103,10 +103,10 @@
                             <dd class="col-sm-6 text-start"><%= faculty.department.name %></dd>
 
                             <dt class="col-sm-6 text-start">Position-1</dt>
-                            <dd class="col-sm-6 text-start"><%= faculty.position1 %></dd>
+                            <dd class="col-sm-6 text-start"><%= faculty.position1.title %></dd>
 
                             <dt class="col-sm-6 text-start">Position-2</dt>
-                            <dd class="col-sm-6 text-start"><%= faculty.position2 %></dd>
+                            <dd class="col-sm-6 text-start"><%= faculty.position2.title %></dd>
 
                             <dt class="col-sm-6 text-start">Landline (Off.)</dt>
                             <dd class="col-sm-6 text-start"><%= faculty.landline_office %></dd>
