--- a/app/views/faculties/_filter_form.html.erb
+++ b/app/views/faculties/_filter_form.html.erb
@@ -27,7 +27,7 @@
     <!-- Name Field -->
     <div class="col-md-4">
       <%= f.label :search_query, "Name", class: "form-label", style: "color:white;" %>
-      <%= f.text_field :search_query, class: "form-control" %>
+      <%= f.text_field :search_query, class: "form-control", id: "filterrific_submit_button"  %>
     </div>
 
     <!-- Search Button -->
