--- a/app/views/faculties/index.html.erb
+++ b/app/views/faculties/index.html.erb
@@ -85,7 +85,7 @@
 
         // Log the submit button to the console for debugging
         const submitButton = filterForm.querySelector('[type="submit"]');
-
+        console.log('Filter Form:', filterForm);
         console.log('Submit Button:', submitButton);
 
       // Optionally, perform other actions based on the selected unit and department
