--- a/app/views/faculties/_faculty_list.html.erb
+++ b/app/views/faculties/_faculty_list.html.erb
@@ -5,23 +5,13 @@
     padding: 15px;
     margin-bottom: 15px;
     border-radius: 5px;
+    border-radius-bottom :0px;
     text-align: center;
   }
 
   .department-title {
     font-size: 24px;
     color: black;
-  }
-
-  .firstend{
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-
-  }
-
-  .lastend{
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
   }
 
   .table th,
@@ -50,6 +40,7 @@
         <th class="firstend"> Sl. No. </th>
         <th> Name </th>
         <th> Designation </th>
+        <th> Sub - Department</th>
         <th> Landline (Off.) </th>
         <th class="lastend"> Details </th>
       </tr>
@@ -59,7 +50,7 @@
         <% faculties_for_department = @faculties_by_department[department.name] %>
         <% if faculties_for_department.present? %>
           <tr>
-            <td colspan="5" class="department-heading">
+            <td colspan="6" class="department-heading">
               <div class="department-title"><%= department.name %></div>
             </td>
           </tr>
@@ -67,8 +58,8 @@
             <tr>
               <td> <%= index + 1 %> </td>
               <td> <%= faculty.name %> </td>
-
               <td> <%= faculty.designation.title %> </td>
+              <td> <%= faculty.sub_directory.title %> </td>
               <td> <%= faculty.landline_office %> </td>
               <td>
                 <!-- Button to trigger Bootstrap modal -->
