--- a/app/views/home/team.html.erb
+++ b/app/views/home/team.html.erb
@@ -64,7 +64,7 @@
 
           <div class="col">
             <div class="card shadow-sm">
-              <%= image_tag(https://github.com/Poorvab2525/Telephone-Directory-Web/blob/main/app/assets/images/Anish.jpg' , class: 'card-img-top img-fluid', alt: 'Mentor Image') %>
+              <%= image_tag('https://github.com/Poorvab2525/Telephone-Directory-Web/blob/main/app/assets/images/Anish.jpg' , class: 'card-img-top img-fluid', alt: 'Mentor Image') %>
               <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
                         <div class="card-body">
                           <p class="card-text">\Anish Kumbhar</p>
